# musique-android

./: README.md
Musique/: build.gradle  settings.gradle
Musique/app/: build.gradle
Musique/app/src/debug/res/drawable/: ic_launcher_foreground.xml
Musique/app/src/debug/res/values/: ic_launcher_background.xml
Musique/app/src/main/: AndroidManifest.xml
Musique/app/src/main/cpp/: AndroidDebug.h  App.cpp  App.h  AppRendering.cpp  AssetID.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Main.cpp  Metronome.h  Midi.h  MidiPlayer.cpp  MidiPlayer.h  MusicDisplayConstants.h  MusicPlayer.cpp  MusicPlayer.h  MusicRenderer.cpp  MusicRenderer.h  MusicXMLParser.h  Player.h  RenderMeasurement.cpp  RenderMeasurement.h  Settings.h  TranspositionRequest.cpp  TranspositionRequest.h  Vec2.h  ViewModelData.h  backup.h
Musique/app/src/main/cpp/Collisions/: BoundingBox.cpp  BoundingBox.h  Vec2.h
Musique/app/src/main/cpp/Debuging/: AndroidDebug.h  Debug.h  Logging.h
Musique/app/src/main/cpp/Exceptions/: BaseException.h  Exceptions.h  ParseExceptions.h
Musique/app/src/main/cpp/FileParsers/ChordSheetParser/: ChordSheetParser.cpp
Musique/app/src/main/cpp/FileParsers/MusicXMLParser/: MusicXMLParser.cpp  ParseError.cpp
Musique/app/src/main/cpp/FrameData/: FrameData.h
Musique/app/src/main/cpp/JNIHelpers/: JNIHelper.cpp  JNIHelper.h
Musique/app/src/main/cpp/MusicData/: AugmentationDot.h  Barline.h  BaseElement.h  Clef.h  ComplexLine.cpp  Credit.h  Direction.h  DisplayConstants.h  Duration.h  Instrument.cpp  Instrument.h  InstrumentBracket.cpp  InstrumentInfo.h  KeySignature.h  LineElement.h  Lyric.cpp  Lyric.h  Measure.cpp  Measure.h  MetronomeMark.h  MetronomeNote.h  MidiInstrument.h  Note.cpp  Note.h  NoteStem.h  Pitch.cpp  Pitch.h  PrintableElement.h  Rehearsal.h  Slur.h  Song.cpp  Song.h  SongData.cpp  SongData.h  SoundEvent.h  Staff.cpp  Staff.h  String.h  System.h  SystemMeasure.h  (+8 more)
Musique/app/src/main/cpp/MusicData/BaseElements/: LineElement.h  NumberElement.h  TextualElement.cpp  TextualElement.h  VisibleElement.cpp  VisibleElement.h
Musique/app/src/main/cpp/MusicData/ChordSheetData/: CSChord.cpp  CSChord.h  CSLyric.cpp  CSLyric.h  CSMeasure.cpp  CSMeasure.h  CSStaff.cpp  CSStaff.h  SyllableGroup.h
Musique/app/src/main/cpp/MusicData/Chords/: Chord.cpp  Chord.h  ChordDegree.h  ChordDiagram.cpp  ChordDiagram.h
Musique/app/src/main/cpp/MusicData/Directions/: BracketDirection.cpp  BracketDirection.h  DashesDirection.cpp  DashesDirection.h  Direction.cpp  Direction.h  DurationDirection.h  Dynamic.cpp  Dynamic.h  DynamicWedge.cpp  DynamicWedge.h  Marker.cpp  Marker.h  MetronomeMark.cpp  MetronomeMark.h  MetronomeNote.h  Rehearsal.cpp  Rehearsal.h  Words.cpp  Words.h
Musique/app/src/main/cpp/MusicData/Endings/: Ending.cpp
Musique/app/src/main/cpp/MusicData/Measures/: Arpeggio.cpp  Arpeggio.h  Barline.cpp  Barline.h  Clef.cpp  Clef.h  Ending.cpp  Ending.h  KeySignature.cpp  KeySignature.h  Measure.cpp  Measure.h  MeasureNumber.cpp  MeasureNumber.h  MeasureRepeat.cpp  MultiMeasureRestSymbol.cpp  TimeSignature.cpp  TimeSignature.h  Tuplet.cpp  Tuplet.h
Musique/app/src/main/cpp/MusicData/Notes/: Accidental.cpp  Accidental.h  AugmentationDot.cpp  AugmentationDot.h  Beam.cpp  Beam.h  BeamGroup.cpp  BeamGroup.h  Fermata.cpp  Fermata.h  GlissandoSlide.cpp  GlissandoSlide.h  Lyric.cpp  Lyric.h  Note.cpp  Note.h  NoteBeamData.h  NoteChord.cpp  NoteChord.h  NoteFlag.cpp  NoteHead.cpp  NoteHead.h  NoteStem.cpp  NoteStem.h  Slur.cpp  Slur.h  TABSlur.h  Tie.cpp  Tie.h  TremoloSingle.cpp
Musique/app/src/main/cpp/MusicData/Notes/Articulations/: Accent.cpp  Accent.h  Articulation.h  BreathMark.cpp  BreathMark.h  Caesura.cpp  Caesura.h  Slide.cpp  Slide.h  StaccatoArticulation.cpp  StaccatoArticulation.h  Stress.cpp  Stress.h
Musique/app/src/main/cpp/MusicData/Notes/Beams/: Beam.cpp  BeamGroup.cpp  BeamGroup.h  NoteBeamData.h
Musique/app/src/main/cpp/MusicData/Notes/Ornaments/: Mordent.cpp  TrillMark.cpp  Turn.cpp
Musique/app/src/main/cpp/MusicData/Notes/Techniques/: Bend.cpp  Bend.h  Bowing.cpp  Bowing.h  GuitarTechnique.cpp  GuitarTechnique.h  Technique.h
Musique/app/src/main/cpp/MusicData/Page/: Credit.cpp  Credit.h  PageNumber.cpp  PageNumber.h
Musique/app/src/main/cpp/MusicData/Techniques/: Bowing.h
Musique/app/src/main/cpp/MusicPlayers/: MusicPlayer.cpp  MusicPlayer.h
Musique/app/src/main/cpp/MusicXMLParser/: BaseElementParser.cpp  BaseElementParser.h  MusicXMLHelper.cpp  MusicXMLHelper.h  MusicXMLParser.cpp  MusicXMLParser.h  NoteElementParser.cpp  NoteElementParser.h  ParseError.cpp  XMLHelper.cpp  XMLHelper.h
Musique/app/src/main/cpp/RenderData/: CubicCurve.h  Line.h  Paint.h  PrintRenderData.h  RenderBitmap.h  RenderData.h  SMuFLGlyph.h  SMuFLID.h  SpannableText.h  Text.h
Musique/app/src/main/cpp/RenderableMusicData/: Renderable.h  RenderableInstrument.h  RenderableMeasure.h  RenderableNote.h  RenderableSong.h  RenderableStaff.h  RenderableSystem.h
Musique/app/src/main/cpp/Utils/: Converters.cpp  Converters.h  Math.cpp  Math.h
Musique/app/src/main/res/drawable/: bass_clef.xml  eighth_rest.xml  flat.xml  folder_icon.xml  half_note_notehead.xml  ic_launcher_background.xml  key_signature_1_sharp.xml  key_signature_2_sharps.xml  key_signature_3_flats.xml  key_signature_3_sharps.xml  key_signature_4_sharps.xml  key_signature_5_sharps.xml  key_signature_6_sharps.xml  key_signature_7_sharps.xml  menu_icon.xml  menu_icon_vertical_dots.xml  metronome_icon.xml  natural.xml  pause_icon.xml  play_icon.xml  printer_icon.xml  quarter_note.xml  quarter_note_notehead.xml  quarter_rest.xml  restart_icon.xml  search_icon.xml  settings_icon.xml  sharp.xml  sixteenth_rest.xml  tab_clef.xml  tempo_icon.xml  thirty_second_rest.xml  time_2.xml  time_3.xml  time_4.xml  time_6.xml  time_8.xml  transpose_icon.xml  treble_clef.xml  volume_full_icon.xml  (+6 more)
Musique/app/src/main/res/layout/: test.xml  (+10 more)
Musique/app/src/main/res/layout-sw320dp/: music_display_fragment.xml
Musique/app/src/main/res/layout-sw600dp/: music_display_fragment.xml
Musique/gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
